# fit_app_qt

./: README.md
app/: CMakeLists.txt  calendaractivity.cpp  calendaractivity.h  calendaractivity.ui  checkboxdelegate.cpp  checkboxdelegate.h  design.qrc  fit_application.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  schedule.cpp  schedule.h  schedule.ui  sets.cpp  sets.h  sets.ui  ui_calendaractivity.h  ui_mainwindow.h  ui_schedule.h  ui_sets.h  validatingcomboboxdelegate.cpp  validatingcomboboxdelegate.h
release/: moc_calendaractivity.cpp  moc_mainwindow.cpp  moc_schedule.cpp  moc_sets.cpp  qrc_design.cpp
